--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>NikitaLakkoju Github</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1> Nikita Lakkoju </h1>
+    <h2> My Projects</h2>
+    <ol> 
+        <li> <a href="a"> Project 1</a></li>
+        <li> <a href="a"> Project 2</a></li>
+        <li> <a href="a"> Project 3</a></li>
+    </ol>
+    <ol>
+        <li><a href="a"> Assignent 1</a></li>
+        <li><a href="a"> Assignent 2</a></li>
+    </ol>
+</body>
+</html>
