--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li> <a href="a"> Project 3</a></li>
     </ol>
     <ol>
-        <li><a href="a"> Assignent 1</a></li>
+        <li><a href="a1/index.html"> Assignent 1</a></li>
         <li><a href="a"> Assignent 2</a></li>
     </ol>
 </body>
