--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </ol>
     <ol>
         <li><a href="a1"> Assignent 1</a></li>
-        <li><a href="a"> Assignent 2</a></li>
+        <li><a href="a2"> Assignent 2</a></li>
     </ol>
 </body>
 </html>
