--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <li> <a href="a"> Project 3</a></li>
     </ol>
     <ol>
-        <li><a href="a1"> Assignent 1</a></li>
-        <li><a href="a2"> Assignent 2</a></li>
+        <li><a href="a1"> Assignment 1</a></li>
+        <li><a href="a2"> Assignment 2</a></li>
+        <li><a href="a3"> Assignment 3</a></li>
     </ol>
 </body>
 </html>
