--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1> Nikita Lakkoju </h1>
     <h2> My Projects</h2>
     <ol> 
-        <li> <a href="a"> Project 1</a></li>
-        <li> <a href="a"> Project 2</a></li>
-        <li> <a href="a"> Project 3</a></li>
+        <li> <a href="p1"> Project 1</a></li>
+        <li> <a href="p"> Project 2</a></li>
+        <li> <a href="p"> Project 3</a></li>
     </ol>
     <ol>
         <li><a href="a1"> Assignment 1</a></li>
