--- a/a4/index.html
+++ b/a4/index.html
@@ -6,6 +6,7 @@
     <title>Calculator</title>
 </head>
 <body>
+    <h1>Basic Calculator</h1>
 
     <input type="text" id="a" >
     <input type="text" id="b" >
