--- a/a3/index.html
+++ b/a3/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Basic Addition</h1>
 <script>
     function greet(){
         alert(txtname.value)
