--- a/a3/index.html
+++ b/a3/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Basic Addition</h1>
+    <h1> Basic Operations</h1>
 <script>
     function greet(){
         alert(txtname.value)
@@ -34,8 +34,8 @@
     <input type="text" id="txtname" />
     <button onclick="greet()" style="background-color: hotpink;">Click</button>
 <br>
-    <input type="text" id="t1" />
-    <input type="text" id="t2" />
+    <input type="text" id="t1" placeholder="Enter your First Number"/>
+    <input type="text" id="t2" placeholder="Enter your Second Number"/>
     <button onclick="calcadd()" style="background-color: plum;">ADD</button>
     <button onclick="calcsub()" style="background-color: plum;">SUBSTRACT</button>
     <button onclick="calcmul()" style="background-color: plum;">MULTIPLY</button>
