--- a/a4/index.html
+++ b/a4/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Basic Calculator</h1>
 
-    <input type="text" id="a" >
-    <input type="text" id="b" >
+    <input type="text" id="a" placeholder="Enter your First Number" >
+    <input type="text" id="b" placeholder="Enter your Second Number" >
     <button onclick="calc()" style="background-color: hotpink;">Click</button>
   <div id="resAdd"></div>
  <div id="resSub"></div>
