--- a/a5/index.html
+++ b/a5/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1> Upload Information </h1>
-    <input type="text" id="name" />
-    <input type="text" id="email" />
-    <input type="text" id="pass" />
+    <input type="text" id="name" placeholder="Enter your Name"/>
+    <input type="text" id="email" placeholder="Enter your Email" />
+    <input type="text" id="pass" placeholder="Enter your Password" />
 
     <button onclick="greet()" style="background-color: darkmagenta;">INFO</button>
 
