--- a/p1/index.html
+++ b/p1/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your Name</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/ball.png" />
+    <link rel="icon" type="image/x-icon" href="images/ball.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div class="header-row"> 
-        <div class="box"><h1>Nikita Lakkoju</h1></div>
+        <div class="box"><h1>Your Name Here</h1></div>
         <div class="box">
           <ul>
             <li><a href="#home">Home</a></li>
@@ -37,7 +37,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
               neque est nihil ipsum error. Deserunt voluptas explicabo ea eum
               quasi. Rem nisi molestias quia nesciunt incidunt numquam fugiat
-              perferendis assumenda ewrwaerf?
+              perferendis assumenda?
             </p>
             <button>Button 1</button>
             <button>Button 1</button>
