--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ol> 
         <li> <a href="p1"> Project 1</a></li>
         <li> <a href="p2"> Project 2</a></li>
-        <li> <a href="p"> Project 3</a></li>
+        <li> <a href="mu-react-store-amber.vercel.app"> Project 3</a></li>
     </ol>
     <ol>
         <li><a href="a1"> Assignment 1</a></li>
